/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Juan Guarnizo
 */
package baseline;

public class Solution44 {

    public static void main(String[] args) {
        GsonManager gsonManager = new GsonManager();

        gsonManager.GsonManager();

        gsonManager.parse();

        gsonManager.productSearch(gsonManager.ask());
    }

}
