package baseline;

public class product {

    private String name;
    private double price;
    private int quantity;


    public String getName(){
        return this.name;
    }

    public double getPrice(){
        return this.price;
    }

    public int getQuantity(){
        return this.quantity;
    }




}
