@startuml
class Solution44{
+main()
}
class GsonManager{
- Gson gson
- File f
- String jsonArray
- product[] productArray

+GsonManager()
+String ask()
+parse()
+productSearch(String productName)
+getProductArrayItem(int index)
}
class product{
- String name;
- double price;
- int quantity;


+String getName()
+double getPrice()
+int getQuantity()
}

Solution44 <-- GsonManager
GsonManager <-- product
@enduml